@@ -2931,6 +2931,11 @@ int readrules(PACKFILE *f, zquestheader *Header, bool keepdata)
 	FFCore.emulation[emuOLD210WATER] = 1;
     }
     
+    if ( (tempheader.zelda_version < 0x255 ) || (tempheader.zelda_version == 0x255 &&  tempheader.build < 51 ) ) //2.10 water and ladder interaction
+    {
+	FFCore.emulation[qr_STEP_IS_FLOAT] = 0;
+    }
+    
     if ( tempheader.zelda_version < 0x250 ) 
     {
 	FFCore.emulation[emu8WAYSHOTSFX] = 1;    
